--- a/day04_Python_basic.ipynb
+++ b/day04_Python_basic.ipynb
@@ -344,56 +344,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['F', 'a', 's', 't', 'c', 'a', 'm', 'p', 'u', 's'],\n",
-       " ['패', '스', '트', '캠', '퍼', '스']]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[list(i) for i in f]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['F', 'a', 's', 't', 'c', 'a', 'm', 'p', 'u', 's'],\n",
-       " ['패', '스', '트', '캠', '퍼', '스']]"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = []\n",
-    "list(map(lambda x: A.append(x), [list(i) for i in f]))\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "A = [list(i) for i in f]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F 패\n",
+      "a 스\n",
+      "s 트\n",
+      "t 캠\n",
+      "c 퍼\n",
+      "a 스\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, y in zip(A[0], A[1]):\n",
+    "    print(x, y)"
+   ]
   }
  ],
  "metadata": {
